--- a/src/css/style.css
+++ b/src/css/style.css
@@ -38,3 +38,54 @@ html {
     background-color: hsl(30, 54%, 90%);
     font-size: 1rem;
   }
+
+  .egg-png {
+    display: grid;
+    row-gap: 2.5rem;
+    max-width: 736px;
+    background-color: hsl(0, 0%, 100%);
+    border-radius: 24px;
+    padding: 2.5rem;
+    margin: 8rem 0 8rem 0;
+  }
+
+  .egg_image {
+    width: 100%;
+    border-radius: 12px;
+  }
+
+  .egg-header {
+    display: grid;
+    row-gap: 1.5rem;
+  }
+
+  .egg-title {
+    font-family: "young-serif";
+    line-height: 100%;
+    letter-spacing: 0px;
+    color: hsl(24, 5%, 18%);
+    font-weight: normal;
+    font-size: 40px;
+  }
+
+  .egg-description {
+    font-family: "outfit-regular";
+    line-height: 150%;
+    letter-spacing: 0;
+    color: hsl(30, 10%, 34%);
+  }
+
+
+  .card hr {
+    border: 1px solid hsl(30, 18%, 87%);
+  }
+
+
+  .egg-prep {
+    display: grid;
+    row-gap: 1rem;
+    background-color: hsl(330, 100%, 98%);
+    padding: 1.5rem;
+    border-radius: 12px;
+    letter-spacing: 0px;
+  }
